--- a/docs/changelog/140693.yaml
+++ b/docs/changelog/140693.yaml
@@ -2,4 +2,5 @@ pr: 140693
 summary: '`CodePointCount` implementation using Panama vectors API'
 area: Codec
 type: enhancement
-issues: []
+issues:
+ - 140567
