Mute org.elasticsearch.xpack.esql.optimizer.PhysicalPlanOptimizerTests testPushDownMetadataTierInOrOperator {default} #140750

--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -333,6 +333,9 @@ tests:
 - class: org.elasticsearch.xpack.esql.parser.SetParserTests
   method: testSetUnmappedFieldsWrongValue
   issue: https://github.com/elastic/elasticsearch/issues/140673
+- class: org.elasticsearch.xpack.esql.optimizer.PhysicalPlanOptimizerTests
+  method: testPushDownMetadataTierInOrOperator {default}
+  issue: https://github.com/elastic/elasticsearch/issues/140750
 
 # Examples:
 #
