Mute org.elasticsearch.xpack.esql.optimizer.PhysicalPlanOptimizerTests testPushDownMetadataTierInOperator {default} #140751

--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -336,6 +336,9 @@ tests:
 - class: org.elasticsearch.xpack.esql.optimizer.PhysicalPlanOptimizerTests
   method: testPushDownMetadataTierInOrOperator {default}
   issue: https://github.com/elastic/elasticsearch/issues/140750
+- class: org.elasticsearch.xpack.esql.optimizer.PhysicalPlanOptimizerTests
+  method: testPushDownMetadataTierInOperator {default}
+  issue: https://github.com/elastic/elasticsearch/issues/140751
 
 # Examples:
 #
