--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -339,6 +339,9 @@ tests:
 - class: org.elasticsearch.xpack.esql.optimizer.PhysicalPlanOptimizerTests
   method: testPushDownMetadataTierInOperator {default}
   issue: https://github.com/elastic/elasticsearch/issues/140751
+- class: org.elasticsearch.xpack.esql.optimizer.PhysicalPlanOptimizerTests
+  method: testPushDownMetadataTierInAndNotOperator {default}
+  issue: https://github.com/elastic/elasticsearch/issues/140752
 
 # Examples:
 #
