Mute org.elasticsearch.snapshots.SnapshotShutdownIT testRemoveNodeDuringSnapshot #140753

--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -342,6 +342,9 @@ tests:
 - class: org.elasticsearch.xpack.esql.optimizer.PhysicalPlanOptimizerTests
   method: testPushDownMetadataTierInAndNotOperator {default}
   issue: https://github.com/elastic/elasticsearch/issues/140752
+- class: org.elasticsearch.snapshots.SnapshotShutdownIT
+  method: testRemoveNodeDuringSnapshot
+  issue: https://github.com/elastic/elasticsearch/issues/140753
 
 # Examples:
 #
