Properly configure PR labels for updatecli policies updates

--- a/.github/updatecli/values.d/updatecli-compose.yml
+++ b/.github/updatecli/values.d/updatecli-compose.yml
@@ -1,3 +1,8 @@
 spec:
   files:
     - "updatecli-compose.yaml"
+
+labels:
+  - ":Delivery/Tooling"
+  - "auto-merge-without-approval"
+  - "dependencies"
