--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -345,6 +345,9 @@ tests:
 - class: org.elasticsearch.snapshots.SnapshotShutdownIT
   method: testRemoveNodeDuringSnapshot
   issue: https://github.com/elastic/elasticsearch/issues/140753
+- class: org.elasticsearch.snapshots.SnapshotShutdownIT
+  method: testRemoveNodeDuringSnapshotWithOtherRunningShardSnapshots
+  issue: https://github.com/elastic/elasticsearch/issues/140755
 
 # Examples:
 #
