Mute org.elasticsearch.snapshots.SnapshotShutdownIT testShutdownWhileSuccessInFlight #140761

--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -354,6 +354,9 @@ tests:
 - class: org.elasticsearch.snapshots.SnapshotShutdownIT
   method: testAbortSnapshotWhileRemovingNode
   issue: https://github.com/elastic/elasticsearch/issues/140760
+- class: org.elasticsearch.snapshots.SnapshotShutdownIT
+  method: testShutdownWhileSuccessInFlight
+  issue: https://github.com/elastic/elasticsearch/issues/140761
 
 # Examples:
 #
