--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -357,6 +357,9 @@ tests:
 - class: org.elasticsearch.snapshots.SnapshotShutdownIT
   method: testShutdownWhileSuccessInFlight
   issue: https://github.com/elastic/elasticsearch/issues/140761
+- class: org.elasticsearch.snapshots.SnapshotShutdownIT
+  method: testSnapshotShutdownProgressTracker
+  issue: https://github.com/elastic/elasticsearch/issues/140762
 
 # Examples:
 #
