--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -363,6 +363,9 @@ tests:
 - class: org.elasticsearch.compute.aggregation.AllLastBytesRefByTimestampGroupingAggregatorFunctionTests
   method: testSimpleWithCranky
   issue: https://github.com/elastic/elasticsearch/issues/140763
+- class: org.elasticsearch.snapshots.SnapshotShutdownIT
+  method: testRemoveNodeAndFailoverMasterDuringSnapshot
+  issue: https://github.com/elastic/elasticsearch/issues/140764
 
 # Examples:
 #
