--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -375,6 +375,9 @@ tests:
 - class: org.elasticsearch.xpack.inference.action.filter.ShardBulkInferenceActionFilterIT
   method: testBulkOperations {p0=true p1=true}
   issue: https://github.com/elastic/elasticsearch/issues/140767
+- class: org.elasticsearch.xpack.inference.action.filter.ShardBulkInferenceActionFilterIT
+  method: testBulkOperations {p0=false p1=true}
+  issue: https://github.com/elastic/elasticsearch/issues/140768
 
 # Examples:
 #
