--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -387,6 +387,9 @@ tests:
 - class: org.elasticsearch.xpack.inference.action.filter.ShardBulkInferenceActionFilterIT
   method: testItemFailures {p0=true p1=false}
   issue: https://github.com/elastic/elasticsearch/issues/140773
+- class: org.elasticsearch.xpack.esql.qa.mixed.EsqlClientYamlIT
+  method: test {p0=esql/46_downsample/Stats from downsampled and non-downsampled index simultaneously with implicit casting}
+  issue: https://github.com/elastic/elasticsearch/issues/140774
 
 # Examples:
 #
