--- a/.buildkite/pipelines/pull-request/ipv6.yml
+++ b/.buildkite/pipelines/pull-request/ipv6.yml
@@ -21,6 +21,7 @@ steps:
           GRADLE_TASK: "{{matrix.GRADLE_TASK}}"
           JAVA_TOOL_OPTIONS: "-Djava.net.preferIPv6Addresses=true"
           _JAVA_OPTIONS: "-Djava.net.preferIPv6Addresses=true"
+          DISABLE_DOCKER_TESTS: "true"
         matrix:
           setup:
             GRADLE_TASK:
