--- a/docs/changelog/140699.yaml
+++ b/docs/changelog/140699.yaml
@@ -2,5 +2,4 @@ pr: 140699
 summary: Handle deleted source index in allocation deciders
 area: Allocation
 type: bug
-issues:
-  - 140630
+issues: []
