--- a/rest-api-spec/src/main/resources/rest-api-spec/api/project.get_many_routing.json
+++ b/rest-api-spec/src/main/resources/rest-api-spec/api/project.get_many_routing.json
@@ -1,5 +1,5 @@
 {
-  "project.get_many_routings": {
+  "project.get_many_routing": {
     "documentation": {
       "url": "https://www.elastic.co/docs/api/doc/elasticsearch#TODO",
       "description": "Get named project routing expressions"
