Mute org.elasticsearch.persistent.PersistentTasksCustomMetadataTests testMinVersionSerialization #140805

--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -405,6 +405,9 @@ tests:
 - class: org.elasticsearch.persistent.ClusterPersistentTasksCustomMetadataTests
   method: testMinVersionSerialization
   issue: https://github.com/elastic/elasticsearch/issues/140804
+- class: org.elasticsearch.persistent.PersistentTasksCustomMetadataTests
+  method: testMinVersionSerialization
+  issue: https://github.com/elastic/elasticsearch/issues/140805
 
 # Examples:
 #
