Mute org.elasticsearch.xpack.esql.qa.single_node.GenerativeForkIT test {csv-spec:string.Url_encode_component tests with table reads} #140809

--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -408,6 +408,9 @@ tests:
 - class: org.elasticsearch.persistent.PersistentTasksCustomMetadataTests
   method: testMinVersionSerialization
   issue: https://github.com/elastic/elasticsearch/issues/140805
+- class: org.elasticsearch.xpack.esql.qa.single_node.GenerativeForkIT
+  method: test {csv-spec:string.Url_encode_component tests with table reads}
+  issue: https://github.com/elastic/elasticsearch/issues/140809
 
 # Examples:
 #
