--- a/docs/changelog/140699.yaml
+++ b/docs/changelog/140699.yaml
@@ -2,4 +2,5 @@ pr: 140699
 summary: Handle deleted source index in allocation deciders
 area: Allocation
 type: bug
-issues: []
+issues:
+  - 140630
