Adds versioned support for base64 kNN vectors
Introduce a dedicated feature flag and transport version to gate
base64-encoded kNN query vector support. This ensures backward
compatibility in mixed-version clusters and makes feature behavior
explicit in serialization and tests.

Relates to #138190

--- a/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search.vectors/172_knn_query_base64_vectors.yml
+++ b/rest-api-spec/src/yamlRestTest/resources/rest-api-spec/test/search.vectors/172_knn_query_base64_vectors.yml
@@ -1,10 +1,6 @@
 setup:
   - requires:
-      cluster_features: "gte_v8.14.0"
-      reason: 'base64 encoding for query vectors added in 8.14'
-
-  - skip:
-      version: "all < 9.4.0"
+      cluster_features: "search.vectors.knn_query_vector_base64"
       reason: "query_vector_base64 is only supported in 9.4.0+"
 
   - do:
