--- a/rest-api-spec/src/main/resources/rest-api-spec/api/project.create_routing.json
+++ b/rest-api-spec/src/main/resources/rest-api-spec/api/project.create_routing.json
@@ -4,7 +4,7 @@
       "url": "https://www.elastic.co/docs/api/doc/elasticsearch#TODO",
       "description": "Create or update named project routing expression"
     },
-    "stability": "stable",
+    "stability": "experimental",
     "visibility": "public",
     "headers": {
       "accept": ["application/json"],
