[Tests] Support better caching for docker based test fixtures
- use prebaked images for HttpProxyTestContainer OidcProviderTestContainer
- Add PullOrBuildImage utility method to allow fallback from prebaked images if not available
This makes maintaining those test fixtures easier as we can use fallback in PR and then rely on
prebaked images ones its merged.

--- a/x-pack/test/idp-fixture/src/main/resources/nginx/Dockerfile
+++ b/x-pack/test/idp-fixture/src/main/resources/nginx/Dockerfile
@@ -25,7 +25,7 @@ RUN set -x \
     && make && make install \
     && apt-get remove --purge --auto-remove -y && rm -rf /var/lib/apt/lists/*
 
-COPY ./nginx/nginx.conf /etc/nginx/nginx.conf
+COPY ./nginx.conf /etc/nginx/nginx.conf
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
