--- a/x-pack/test/idp-fixture/build.gradle
+++ b/x-pack/test/idp-fixture/build.gradle
@@ -8,6 +8,16 @@ dockerFixtures {
     version = "1.1"
     baseImages = ["openjdk:11.0.16-jre"]
   }
+  httpproxy {
+    dockerContext = file("src/main/resources/nginx")
+    version = "1.0"
+    baseImages = ["nginx:1.27.1"]
+  }
+  oidc {
+    dockerContext = file("src/main/resources/oidc")
+    version = "1.0"
+    baseImages = ["c2id/c2id-server-demo:16.1.1", "eclipse-temurin:17-noble"]
+  }
   openldap {
     dockerContext = file("src/main/resources/openldap")
     version = "1.0"
