--- a/docs/changelog/140264.yaml
+++ b/docs/changelog/140264.yaml
@@ -1,5 +1,6 @@
 pr: 140264
-summary: "New optimized (native) functions for BBQ Int4 to 1-bit scoring"
+summary: New optimized (native) functions for BBQ Int4 to 1-bit scoring
 area: Vector Search
 type: enhancement
-issues: []
+issues:
+ - 128523
