--- a/x-pack/plugin/esql/build.gradle
+++ b/x-pack/plugin/esql/build.gradle
@@ -614,3 +614,9 @@ tasks.named('stringTemplates').configure {
     it.outputFile = "org/elasticsearch/xpack/esql/expression/function/scalar/math/RoundToDouble.java"
   }
 }
+
+tasks.register("analyzePromqlQueries", JavaExec) {
+  mainClass = 'org.elasticsearch.xpack.esql.optimizer.promql.QueryAnalyzer'
+  classpath = sourceSets.test.runtimeClasspath
+  args project.getProperty('queriesFile')
+}
