Rename analyzer class

--- a/x-pack/plugin/esql/build.gradle
+++ b/x-pack/plugin/esql/build.gradle
@@ -616,7 +616,7 @@ tasks.named('stringTemplates').configure {
 }
 
 tasks.register("analyzePromqlQueries", JavaExec) {
-  mainClass = 'org.elasticsearch.xpack.esql.optimizer.promql.QueryAnalyzer'
+  mainClass = 'org.elasticsearch.xpack.esql.optimizer.promql.PromqlCoverageAnalyzer'
   classpath = sourceSets.test.runtimeClasspath
   args project.findProperty("queriesFile") ?: "", project.findProperty("outputFile") ?: ""
 }
