copilot suggestion for more explicit regex

--- a/modules/reindex-management/src/yamlRestTest/resources/rest-api-spec/test/reindex/30_cancel_reindex.yml
+++ b/modules/reindex-management/src/yamlRestTest/resources/rest-api-spec/test/reindex/30_cancel_reindex.yml
@@ -112,7 +112,7 @@ setup:
         task_id: $deleteTaskId
       catch: missing
   - match: { error.type: resource_not_found_exception }
-  - match: { error.reason: '/reindex\ task\ \[.*?]\ either\ not\ found\ or\ completed*/' }
+  - match: { error.reason: '/^reindex\ task\ \[.*?]\ either\ not\ found\ or\ completed$/' }
 
   # cleanup
   - do:
