--- a/.github/updatecli/values.d/scm.yml
+++ b/.github/updatecli/values.d/scm.yml
@@ -2,15 +2,9 @@ scm:
   enabled: true
   owner: elastic
   repository: elasticsearch
-  branch: "{{ requiredEnv `UPDATECLI_BRANCH` }}"
+  branch: "main" # this value is overwritten by the GH workflow to match current branch
   commitusingapi: true
   # begin updatecli-compose policy values
   user: elasticmachine
   email: 42973632+elasticmachine@users.noreply.github.com
   # end updatecli-compose policy values
-  pullrequest:
-    labels:
-      - ":Delivery/Tooling"
-      - ":Delivery/Packaging"
-      - "auto-merge-without-approval"
-      - "dependencies"
