--- a/docs/changelog/140003.yaml
+++ b/docs/changelog/140003.yaml
@@ -2,4 +2,5 @@ pr: 140003
 summary: Add provider validation call to Update Inference Endpoint operation
 area: Inference
 type: enhancement
-issues: []
+issues:
+  - 122356
