--- a/x-pack/plugin/otel-data/build.gradle
+++ b/x-pack/plugin/otel-data/build.gradle
@@ -6,29 +6,13 @@
  */
 import org.elasticsearch.gradle.transform.UnzipTransform
 import com.google.protobuf.gradle.GenerateProtoTask
-
-buildscript {
-  repositories {
-    maven { url = "https://jitpack.io" }
-  }
-  dependencies {
-    classpath('com.github.google:protobuf-gradle-plugin:PR786-SNAPSHOT') {
-      changing = false
-    }
-  }
-}
-
 plugins {
   id 'elasticsearch.internal-es-plugin'
   id 'elasticsearch.internal-yaml-rest-test'
   id 'elasticsearch.internal-java-rest-test'
   id 'elasticsearch.internal-cluster-test'
-  // We rely on a snapshot including a fix for 9.1 compatibility.
-  // See https://github.com/google/protobuf-gradle-plugin/pull/786
-  //  id('com.google.protobuf') version '0.9.5'
+  id('com.google.protobuf') version '0.9.5'
 }
-
-apply plugin:"com.google.protobuf"
 
 esplugin {
   name = 'x-pack-otel-data'
@@ -78,7 +62,6 @@ dependencies {
   clusterModules project(xpackModule('analytics'))
   clusterModules project(xpackModule('ilm'))
   clusterModules project(xpackModule('mapper-aggregate-metric'))
-  clusterModules project(xpackModule('mapper-exponential-histogram'))
   clusterModules project(xpackModule('mapper-constant-keyword'))
   clusterModules project(xpackModule('mapper-counted-keyword'))
   clusterModules project(xpackModule('stack'))
@@ -99,7 +82,7 @@ dependencies {
   javaRestTestImplementation "io.opentelemetry:opentelemetry-sdk-extension-autoconfigure:$otelVersion"
   javaRestTestImplementation "io.opentelemetry:opentelemetry-sdk-extension-autoconfigure-spi:$otelVersion"
 
-  api "com.google.protobuf:protobuf-java:${protobufVersion}"
+  implementation "com.google.protobuf:protobuf-java:${protobufVersion}"
   // The protobuf plugin only adds a dependency for the variant relevant for the current platform.
   // Without explicitly adding all classifiers, the --write-verification-metadata task would only add the one for the current platform.
   // Therefore, the verification check would fail on other platforms, like on CI or for contributors that work on another platform.
