--- a/muted-tests.yml
+++ b/muted-tests.yml
@@ -351,6 +351,9 @@ tests:
 - class: org.elasticsearch.xpack.inference.services.jinaai.JinaAIServiceTests
   method: test_embeddingModel_chunkedInfer_batchesCallsWhenLateChunkingEnabled
   issue: https://github.com/elastic/elasticsearch/issues/140890
+- class: org.elasticsearch.repositories.azure.AzureBlobContainerRetriesTests
+  method: testReadBlobWithPrematureConnectionClose
+  issue: https://github.com/elastic/elasticsearch/issues/140954
 
 # Examples:
 #
